--- a/css/style.css
+++ b/css/style.css
@@ -73,12 +73,12 @@ p{
 }
 
 .header-buttons a{
-	border: 1px solid #fff;
+	border: 1px solid #07a893;
 	border-radius: 100px;
 	margin: 0 5px;
 	padding: 12px 35px;
 	outline: none;
-	color: #fff;
+	color: ##74e9d7;
 	font-size: 1rem;
 }
 
